--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -64,7 +64,12 @@
       <artifactId>hive-exec</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <!-- inter-project -->
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-hdfs</artifactId>
+      <version>2.6.0</version>
+    </dependency>
+     <!--inter-project-->
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
