--- a/common/pom.xml
+++ b/common/pom.xml
@@ -98,6 +98,12 @@
       <artifactId>json</artifactId>
       <version>${json.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>2.6.0</version>
+    </dependency>
+
   </dependencies>
 
   <profiles>
