--- a/ql/pom.xml
+++ b/ql/pom.xml
@@ -712,12 +712,15 @@
                   <!-- order is meant to be the same as the ant build -->
                   <include>org.apache.hive:hive-common</include>
                   <include>org.apache.hive:hive-exec</include>
-                  <!--<include>org.apache.hive:hive-serde</include>-->
+                  <!--TODO-->
+                  <include>org.apache.hive:hive-serde</include>
                   <include>com.esotericsoftware.kryo:kryo</include>
                   <include>com.twitter:parquet-hadoop-bundle</include>
                   <include>org.apache.thrift:libthrift</include>
-                  <!--<include>commons-lang:commons-lang</include>-->
-                  <!--<include>org.apache.commons:commons-lang3</include>-->
+                  <!--TODO-->
+                  <include>commons-lang:commons-lang</include>
+                  <!--TODO-->
+                  <include>org.apache.commons:commons-lang3</include>
                   <include>org.jodd:jodd-core</include>
                   <include>org.json:json</include>
                   <include>org.apache.avro:avro</include>
@@ -732,7 +735,8 @@
                   <include>org.iq80.snappy:snappy</include>
                   <include>org.codehaus.jackson:jackson-core-asl</include>
                   <include>org.codehaus.jackson:jackson-mapper-asl</include>
-                  <!--<include>com.google.guava:guava</include>-->
+                  <!--TODO-->
+                  <include>com.google.guava:guava</include>
                   <include>net.sf.opencsv:opencsv</include>
                   <include>org.apache.hive:spark-client</include>
                   <include>joda-time:joda-time</include>
